# RAG-Chatbot-System

./: .dockerignore  .env.example  .gitignore  ERD_RAG_Chatbot_Explanation.md  README.md  RagChatbotSystem.sln  docker-compose.yml  nginx.conf  note.md  plan_tas5.md  setup_vps.sh
.playwright-cli/: page-2026-07-10T09-16-51-459Z.yml  page-2026-07-10T09-17-18-284Z.yml  page-2026-07-10T09-18-43-948Z.yml  page-2026-07-10T09-20-35-545Z.yml  page-2026-07-10T09-23-45-133Z.yml  page-2026-07-10T09-24-17-736Z.yml  page-2026-07-10T09-29-10-196Z.yml  page-2026-07-10T09-32-19-717Z.yml  page-2026-07-10T09-32-52-041Z.yml  page-2026-07-10T09-33-31-200Z.yml  page-2026-07-10T09-34-25-448Z.yml  page-2026-07-10T14-30-19-052Z.yml  page-2026-07-10T14-30-46-879Z.yml  page-2026-07-10T14-30-55-853Z.yml  page-2026-07-10T14-33-39-978Z.yml  page-2026-07-10T14-34-37-224Z.yml  page-2026-07-10T14-34-44-054Z.yml  page-2026-07-10T14-35-17-400Z.yml  page-2026-07-10T14-35-47-960Z.yml  page-2026-07-10T14-37-14-678Z.yml  page-2026-07-10T14-37-30-196Z.yml  page-2026-07-10T14-37-46-282Z.yml  page-2026-07-10T14-39-18-188Z.yml  page-2026-07-10T14-39-30-283Z.yml  page-2026-07-10T14-39-42-214Z.yml  page-2026-07-10T14-41-20-673Z.yml  page-2026-07-10T14-57-11-525Z.yml  page-2026-07-10T14-58-09-179Z.yml  page-2026-07-10T15-25-25-608Z.yml  page-2026-07-10T15-25-25-635Z.yml  page-2026-07-10T15-25-30-005Z.yml  page-2026-07-10T15-25-30-308Z.yml  page-2026-07-10T15-25-34-835Z.yml  (+40 more)
RAG-Retrieval-Indexing-API/RAG-Retrieval-Indexing-API/: .env.example  Dockerfile  README.md  pyproject.toml  test_api.py
docs/: CHANGELOG.md  (+37 more)
(+289 files in other folders)
